<?xml version="1.0"?>
<package format="2">
  <name>cloudwatch_logger</name>
  <version>2.1.1</version>
  <description>CloudWatch Logger node for publishing logs to AWS CloudWatch Logs</description>

  <url>http://wiki.ros.org/cloudwatch_logger</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_lt='3.0.0'>cloudwatch_logs_common</build_depend>
  <build_depend version_lt='3.0.0'>aws_common</build_depend>
  <build_depend version_lt='3.0.0'>aws_ros1_common</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend version_lt='3.0.0'>cloudwatch_logs_common</build_export_depend>
  <build_export_depend version_lt='3.0.0'>aws_common</build_export_depend>
  <build_export_depend version_lt='3.0.0'>aws_ros1_common</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend version_lt='3.0.0'>cloudwatch_logs_common</exec_depend>
  <exec_depend version_lt='3.0.0'>aws_common</exec_depend>
  <exec_depend version_lt='3.0.0'>aws_ros1_common</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>google-mock</test_depend>
  <test_depend>rostest</test_depend>
</package>
